social media section added

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <hr class="h-[1px] border-dashed bg-#13131833"> 
       </div>
      <!-- programs section started -->
-      <!-- <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+      <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
         <div class="justify-center items-center">
           <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold ">Program Sections</h1>
           <p class="w-auto mt-6 text-center lg:ml-[330px] lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
@@ -182,7 +182,7 @@
             </div>
           </div>
         </div>
-         <div class="card w-auto lg:h-[450px] bg-[#13131280] shadow-xl image-full">
+         <div class="card w-auto h-[450px] bg-[#13131280] shadow-xl image-full">
           <figure><img class="w-[100%] h-[450px]" src="Images/4.png" alt="Professional Program" /></figure>
           <div class="card-body ml-10">
             <h2 class="card-title mt-[200px] text-[28px] font-[Manrope] text-[#FFF] font-extrabold">Professional Program</h2>
@@ -194,7 +194,7 @@
           </div>
         </div> 
        </div>
-      </section> -->
+      </section>
         <!-- programs section end-->
         <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
           <hr class="h-[1px] border-dashed bg-#13131833"> 
@@ -320,11 +320,11 @@
           <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
             <hr class="h-[1px] border-dashed bg-#13131833"> 
           </div>
-          <div class="flex-col px-5 py-5 lg:grid lg:grid-cols-2 h-auto lg:h-[550px] rounded-2xl border-[1px] border-[#1313181A] shadow-xl">
+          <div class="flex-col py-5 lg:grid lg:grid-cols-2 h-auto lg:my-6 lg:h-[600px] rounded-2xl border-[1px] border-[#1313181A] shadow-xl">
             <div class="image">
-              <img class="w-auto lg:w-[441px] lg:h-[470px] lg:my-8 lg:ml-8 rounded-2xl" src="Images/11.png" alt="client-question">
+              <img class="w-auto lg:w-[441px] lg:h-[470px] lg:my-9 lg:ml-7 rounded-2xl" src="Images/11.png" alt="client-question">
             </div>
-            <div class="flex-col lg:my-8 lg:-ml-12 lg:w-[600px]">
+            <div class="flex-col mt-3 lg:my-6 lg:-ml-12 lg:w-[600px]">
               <div class="join join-vertical w-full">
                 <div class="collapse collapse-plus h-[118px] join-item border-y border-base-300">
                   <input type="radio" name="my-accordion-4" checked="checked" /> 
@@ -462,56 +462,54 @@
           </div>
         </section>
         <!-- get in touch section end  -->
+
+        <!-- social media section started  -->
         <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
           <div class="h-[150px] bg-neutral-900 bg-opacity-5 rounded-xl items-center">
-            <h1 class="text-center text-neutral-900 text-2xl font-extrabold font-[Manrope] pt-[35px]">Social Media</h1> 
-            <div class="w-[174.32px] h-6 items-center mx-[515px] mt-6">
+            <h1 class="text-center relative text-neutral-900 text-2xl font-extrabold font-[Manrope] pt-[35px]">Social Media</h1> 
+            <div class="w-[174.32px] absolute h-6 items-center mx-[535px] mt-6">
               <img src="Images/Social.svg" alt="social-icon">
             </div>
           </div>
-
         </section>
+        <!-- social media section end  -->
         
 
 
     </main>
     <!-- footer section started  -->
     <footer class="">
-      <div class="footer lg:px-[135px] lg:gap-[100px] lg:py-[100px] bg-[#131318] text-white lg:h-[454px]">
-        <aside>
-          <h1 class="text-[28px] text-white font-extrabold font-[Manrope]">Get In Touch</h1>
-          <p class="w-auto lg:w-[346px] text-base text-[#FFFFFF99] font-medium mt-4">Dit amet consectetur. Condimentum <br> adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-          <div class="flex-col mt-6">
-            <p class="flex justify-stretch gap-2"><img src="Images/email.png" alt="email">hockeys@support.com</p>
-            <p class="flex justify-stretch gap-2 mt-4"><img src="Images/phone.png" alt="phone">(+62) 123-321-543</p>
-          </div>
-        </aside> 
-
+      <footer class="footer bg-[#131318] h-auto lg:h-[400px] px-5 lg:px-[135px] py-5 lg:py-[100px] text-white">
         <nav>
-          <header class="text-[18px] text-white font-bold font-[Manrope]">Company</header> 
-          <a class="link link-hover mt-[29px] text-base text-[#FFFFFF99] font-medium">About us</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium"> Leadership</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Careers</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium"> News & Article</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">  Legal Notice</a>
+          <header class="text-white lg:text-[28px] font-[Manrope] font-extrabold">Get In Touch</header> 
+          <a class="w-auto lg:w-[346px] mt-3 text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium leading-[26px]">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </a>
+          <a class="flex justify-stretch gap-2 mt-6"><img src="Images/email.png" alt="email">hockeys@support.com</a>
+          <a class="flex justify-stretch gap-2 mt-[18px]"><img src="Images/phone.png" alt="email">(+62) 123-321-543</a>
+        </nav>
+        <nav>
+          <header class="text-white text-lg font-[Manrope] font-bold leading-[normal]">Company</header> 
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium mt-7">About us</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Leadership</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Careers</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">News & Article</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium"> Legal Notice</a>
         </nav> 
         <nav>
-          <header class="text-[18px] text-white font-bold font-[Manrope]">Support</header> 
-          <a class="link link-hover mt-[29px] text-base text-[#FFFFFF99] font-medium">Help Center</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">FAQ</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Ticket Support</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Contact Us</a>
+          <header class="text-white text-lg font-[Manrope] font-bold leading-[normal]">Support</header> 
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium mt-7">Help Center</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">FAQ</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Ticket Support</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Contact Us</a>
         </nav>
         <nav>
-          <header class="text-[18px] text-white font-bold font-[Manrope]">Services</header> 
-          <a class="link link-hover mt-[29px] text-base text-[#FFFFFF99] font-medium">Academy</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Group Lesson</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Private Lesson</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Hockeys for kids</a>
-          <a class="link link-hover text-base text-[#FFFFFF99] font-medium">Hockeys for Adult</a>
+          <header class="text-white text-lg font-[Manrope] font-bold leading-[normal]">Services</header> 
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium mt-7">Academy </a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Group Lesson</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Private Lesson</a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Hockeys for kids </a>
+          <a class="text-[rgba(255,255,255,0.60)] text-base font-[Manrope] font-medium">Hockeys for Adult</a>
         </nav>
-      </div>
-
+      </footer>
     </footer>
     <!-- footer section end  -->
     
