some changes added in programs section

--- a/index.html
+++ b/index.html
@@ -157,42 +157,42 @@
         </div>
 
        <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
-        <div class="container w-auto lg:flex gap-6 justify-between mx-auto lg:px-30 my-12">
-          <div class="card w-[335px] lg:w-1/2 h-[244px] bg-[#13131280] placeholder:
-           shadow-xl image-full">
-            <figure><img class="w-full" src="Images/2.png" alt="Junior Program" /></figure>
-            <div class="card-body ml-10">
-              <h2 class="card-title text-[28px] font-[Manrope] text-[#FFF] font-extrabold mt-24">Junior Program</h2>
-              <p class="pr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+        <div class="lg:flex lg:justify-stretch lg:gap-6">
+          <div class="card w-auto lg:w-[573px] h-auto lg:h-[338px] rounded-2xl bg-[rgba(19, 19, 24, 0.50)] shadow-xl image-full">
+            <figure><img src="Images/2.png" alt="hokey" /></figure>
+            <div class="card-body">
+              <h2 class="card-title text-white text-[28px] font-[Manrope]  font-extrabold leading-[normal] mt-[95px]">Junior Program</h2>
+              <p class="w-auto lg:w-[495px] text-white text-base font-[Manrope] font-medium leading-[26px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                 enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
               <div class="card-actions justify-start">
-                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-9">Register Now!</button>
+                <button class="btn inline-flex justify-center items-center gap-2.5 border lg:px-[22px] py-2.5 mt-2 rounded-lg border-none bg-[#FF4240] text-white text-center text-xl font-[Manrope] font-bold leading-[normal]">Register Now!</button>
               </div>
             </div>
           </div>
-          <div class="card w-[335px] lg:w-1/2 lg:ml-6 bg-[#13131280] shadow-xl image-full">
-            <figure><img class="w-full" src="Images/3.png" alt="Teenager Program" /></figure>
-            <div class="card-body ml-10">
-              <h2 class="card-title text-[28px] font-[Manrope] text-[#FFF] font-extrabold mt-24">Teenager Program</h2>
-              <p class="pr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+          <div class="card w-auto lg:w-[573px] h-auto my-3 lg:my-0 lg:h-[338px] rounded-2xl bg-[rgba(19, 19, 24, 0.50)] shadow-xl image-full">
+            <figure><img src="Images/3.png" alt="hokey" /></figure>
+            <div class="card-body">
+              <h2 class="card-title text-white text-[28px] font-[Manrope] font-extrabold leading-[normal] mt-[95px]">Teenager Program</h2>
+              <p class="w-auto lg:w-[495px] text-white text-base font-[Manrope] font-medium leading-[26px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                 enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
               <div class="card-actions justify-start">
-                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-9">Register Now!</button>
+                <button class="btn inline-flex justify-center items-center gap-2.5 border px-[22px] py-2.5 mt-2 rounded-lg border-none bg-[#FF4240] text-white text-center text-xl font-[Manrope] font-bold leading-[normal]">Register Now!</button>
               </div>
             </div>
           </div>
         </div>
-         <div class="card w-auto h-[450px] bg-[#13131280] shadow-xl image-full">
-          <figure><img class="w-[100%] h-[450px]" src="Images/4.png" alt="Professional Program" /></figure>
-          <div class="card-body ml-10">
-            <h2 class="card-title mt-[200px] text-[28px] font-[Manrope] text-[#FFF] font-extrabold">Professional Program</h2>
-            <p class="w-[520px] mr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium my-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+        <div class="card h-auto lg:h-[450px] w-auto lg:w-[1170px] mt-3 lg:mt-6 rounded-2xl bg-[rgba(19, 19, 24, 0.50)] shadow-xl image-full">
+          <figure><img class="w-[1170px]" src="Images/4.png" alt="hokey" /></figure>
+          <div class="card-body">
+            <h2 class="card-title text-white text-[28px] font-[Manrope]  font-extrabold leading-[normal] mt-[207px]">Professional Program</h2>
+            <p class="w-auto lg:w-[495px] text-white text-base font-[Manrope] font-medium leading-[26px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
               enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
             <div class="card-actions justify-start">
-              <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-9">Register Now!</button>
+              <button class="btn inline-flex justify-center items-center gap-2.5 border px-[22px] py-2.5 rounded-lg mt-4 border-none bg-[#FF4240] text-white text-center text-xl font-[Manrope] font-bold leading-[normal]">Register Now!</button>
             </div>
           </div>
-        </div> 
+        </div>
+         
        </div>
       </section>
         <!-- programs section end-->
